update task factory
