# src/controller_app/equipment_model/controllers.py
@@ -2,6 +2,7 @@ from flask import Blueprint, jsonify, request, abort, send_file
 
 from .models import EquipmentModel
 from ..factory.models import Factory
+from ..equipment.models import Equipment
 from ..database import db
 
 import io
@@ -31,27 +32,27 @@ def get_model_mapping(factory_id: int):
     return jsonify(model.dict)
 
 
-@model_bp.route("/factory/<int:factory_id>/equipment_model", methods=["PUT"])
-def set_equipment_mode(factory_id: int):
-    factory = Factory.query.get_or_404(factory_id)
+@model_bp.route("/equipment/<int:equipment_id>/equipment_model", methods=["PUT"])
+def set_equipment_mode(equipment_id: int):
+    equipment = Equipment.query.get_or_404(equipment_id)
 
     pb_file = request.files.get("file")
     # print(request.files)
     if pb_file is None:
         abort(400, "need a pb file")
 
-    request_form = request.form
-    mapping = request_form.get("mapping")
-    if mapping is None:
-        abort(400, "need to provide class mapping in json body")
+    # request_form = request.form
+    # mapping = request_form.get("mapping")
+    # if mapping is None:
+    #     abort(400, "need to provide class mapping in json body")
 
     hasher = hashlib.md5()
     pb_binary = pb_file.read()
     hasher.update(pb_binary)
     md5_str = hasher.hexdigest()
 
-    model = EquipmentModel(class_map=mapping, pb=pb_binary, md5=md5_str)
-    factory.equipment_model = model
+    model = EquipmentModel(pb=pb_binary, md5=md5_str)
+    equipment.equipment_model = model
 
     db.session.commit()
 
